update css ke-05 elwin
source gambar

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -117,7 +117,7 @@ a {
 .second-section{
   margin: 0 auto;
   padding-bottom: 110px;
-  background-image: url("../html_css_A-17/docs/assets/images/pekerja.png");
+  background-image: url("https://raw.githubusercontent.com/elwin001/A-17/master/docs/assets/images/pekerja.png");
   background-size: cover;
   justify-content: center;
   align-items: center;
