--- a/stylesheet.css
+++ b/stylesheet.css
@@ -117,7 +117,7 @@ a {
 .second-section{
   margin: 0 auto;
   padding-bottom: 110px;
-  background-image: url("https://user-images.githubusercontent.com/92869765/158110028-cffa81ce-1482-4c3d-bfc1-78c682af7a70.png");
+  background-image: url("docs/assets/images/pekerja.png");
   background-size: cover;
   justify-content: center;
   align-items: center;
