--- a/stylesheet.css
+++ b/stylesheet.css
@@ -51,6 +51,13 @@ a {
   column-gap: 5px;
 }
 
+.grid-wwalk-4 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  column-gap: 5px;
+}
+
 .menu-icon {
   color: white;
   float: right;
@@ -117,11 +124,29 @@ a {
 .second-section{
   margin: 0 auto;
   padding-bottom: 110px;
-  background-image: url("../html_css_A-17/docs/assets/images/pekerja.png");
+  background-image: url("https://user-images.githubusercontent.com/92869765/158110028-cffa81ce-1482-4c3d-bfc1-78c682af7a70.png");
   background-size: cover;
   justify-content: center;
   align-items: center;
 }
+
+.third-section{
+  margin: 0 auto;
+  padding-bottom: 110px;
+  background-color: #C8A47E;
+  justify-content: center;
+  align-items: center;
+}
+
+.fourt-section{
+  margin: 0 auto;
+  padding-bottom: 110px;
+  background-image: url(docs/assets/images/runbackground.png);
+  background-size: cover;
+  justify-content: center;
+  align-items: center;
+}
+
 
 .l-column{
   margin-top: 80px;
@@ -135,6 +160,7 @@ a {
 
 .r-column{
   margin-top: 80px;
+  margin-left: 20px;
 }
 
 .r-column h1{
@@ -145,16 +171,21 @@ a {
   margin-left: -5px;
 }
 
-.r-column h2{
-  color: #ffffff;
-  font-size: 25px;
-  margin-bottom: 30px;
+.txt-1{
+  color: #B0FCFF;
+  font-family: 'Lucida Sans', sans-serif;
+  font-weight: 700;
+  font-size: 40px;
+  margin-top: 25px;
+  margin-bottom: 5px;
 }
 
-.r-column p{
-  color: #ffffff;
-  font-size: 20px;
-  line-height: 30px;
+.txt-2{
+  color: #B0FCFF;
+  font-family: 'Lucida Sans', sans-serif;
+  font-weight: 900;
+  font-size: 50px;
+  margin-bottom: 30px;
 }
 
 .btn-info{
@@ -194,110 +225,299 @@ a {
   line-height: 30px;
 }
 
+.popular-product{
+  padding: 140px 70px;
+}
+
+.popular-product h3{
+  padding: 2px 10px;
+  font-size: 25px;
+}
+
+.product{
+  display:flex;
+  flex-wrap:wrap;
+}
+
+.product-list{
+  flex:auto;
+  width: 25%;
+  padding:0 10px;
+}
+
+.popular-product-section{
+  width: 100%;
+  background-color: #6b696c;
+  color: #ffffff;
+}
+
+.product-image{
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 5px;
+  /* width: auto; */
+  height: 180px;
+  /* padding: 0 10px; */
+}
+
+.product-image img{
+  /* text-align: center; */
+  display: block;
+  padding: 10px 0;
+  /* max-width: 220px; */
+  max-height: 180px;
+  object-fit: contain;
+  /* margin-left: auto;
+  margin-right: auto; */
+  width: 100%;
+}
+
+.product-name h4{
+  padding-bottom: 4px;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.3);
+}
+
+.product-name p{
+  font-weight: normal;
+  font-size: 12pt;
+  text-align: justify;
+}
+
+.offer-section{
+  width: 100%;
+  background-color: #6b696c;
+  color: #ffffff;
+}
+
+.container-offer{
+  padding: 100px 20px;
+  text-align: center;
+}
+
+.btn-offer{
+  padding: 10px 20px;
+  box-shadow: 0 7px #00000050;
+  border-radius: 5px;
+}
+
+.btn-offer:active{
+  box-shadow: none;
+  position: relative;
+  top: 7px;
+}
+
+.seven-section{
+  background-image: url("docs/assets/images/shoes.jpg");
+  margin: 0 auto;
+  padding-bottom: 110px;
+  background-size: cover;
+  justify-content: center;
+  align-items: center;
+}
+
+.heading{
+  padding: 5%;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.heading h1{
+  color: black;
+  font-size: 70px;
+  text-align:center;
+  margin-bottom:15px;
+}
+
+.heading h2 {
+  color: black;
+  font-size: 100px;
+  margin-bottom: 30px;
+  margin-right:30px;
+  margin-top:30px;
+  padding:50px;
+  float:left;
+}
+
+.heading p{
+  color:black;
+  font-size:30px;
+}
+
 @media all and (max-width: 1180px) {
 
-.grid-wwalk {
-  display: grid;
-  grid-template-columns: 50% 50%;
-} 
+  .grid-wwalk {
+    display: grid;
+    grid-template-columns: 50% 50%;
+  } 
 
-.l-column{
-  margin-top: 80px;
-}
+  .l-column{
+    margin-top: 80px;
+  }
 
-.img-responsive {
-  max-width: 900px;
-  width: 100%;
-  margin-left: 0px;
-}
+  .img-responsive {
+    max-width: 900px;
+    width: 100%;
+    margin-left: 0px;
+  }
 
-.r-column h1{
-  font-size: 50px;
-  margin-left: -3px;
-}
+  .r-column h1{
+    font-size: 50px;
+    margin-left: -3px;
+  }
 
-.r-column h2{
-  color: #ffffff;
-  font-size: 20px;
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
+  .txt-1{
+    font-weight: 500;
+    font-size: 20px;
+    margin-top: 40px;
+  }
 
-.r-column p{
-  color: #ffffff;
-  font-size: 15px;
-  line-height: 30px;
-}
+  .txt-2{
+    font-weight: 700;
+    font-size: 40px;
+    margin-top: -5px;
+  }
 
-.btn-info{
-  font-size: 15px;
-  font-weight: lighter;
-  padding: 7px 35px;
-}
+  .btn-info{
+    font-size: 15px;
+    font-weight: lighter;
+    padding: 7px 35px;
+  }
 
-.text-info{
-  margin: 20% 10% 7%;
-  padding: 20px;
-  width: 37%;
-  background-color:rgba(75, 75, 75, 0.4);
-  border-radius: 20px;
-}
+  .text-info{
+    margin: 20% 10% 7%;
+    padding: 20px;
+    width: 37%;
+    background-color:rgba(75, 75, 75, 0.4);
+    border-radius: 20px;
+  }
 
-.text-info h1{
-  font-size: 56px;
-}
+  .text-info h1{
+    font-size: 56px;
+  }
 
-.text-info p{
-  margin-top: 30px;
-  font-size: 20px;
-}
+  .text-info p{
+    margin-top: 30px;
+    font-size: 20px;
+  }
+
+  .product-list{
+    width: 50%;
+  }
 
 }
 
 @media all and (max-width: 670px) {
 
-.grid-wwalk-1 {
-  display: grid;
-  grid-template-columns: 100%;
-  gap: 5px;
-}
+  .grid-wwalk-1 {
+    display: grid;
+    grid-template-columns: 100%;
+    gap: 5px;
+  }
 
   .grid-wwalk-2 {
-  display: grid;
-  grid-template-columns: 100%;
-  gap: 5px;
-}
+    display: grid;
+    grid-template-columns: 100%;
+    gap: 5px;
+  }
 
-.header-nav{
-  display: none;
-}
+  .header-nav{
+    display: none;
+  }
+    
+  .menu-icon{
+    display: block;
+    visibility: visible;
+  }
+
+  .r-column{
+    margin: 0 auto;
+    padding: 10px 10px 10px 25px;
+    background-color: rgba(100, 245, 255, 0.07);
+    border-radius: 10px;
+  }
+
+  .text-info{
+    margin: 55% auto;
+    padding: 20px;
+    width: 100%;
+    text-align: center;
+  }
+
+  .text-info h1{
+    font-size: 80px;
+  }
+
+  .text-info p{
+    font-size: 20px;
+    line-height: 30px;
+  }
+
+  .popular-product{
+    padding: 80px 20px;
+  }
+
+  .product{
+    flex-direction: column;
+  }
+
+  .product-list{
+    margin: 0 auto;
+    /* padding: 0; */
+    width: 100%;
+  }
+
+  .popular-product h3{
+    font-size: 30px;
+  }
+
+  .wwalk-footer {
+    background-color:rgba(75, 75, 75, 0.7);
+  }
   
-.menu-icon{
-  display: block;
-  visibility: visible;
+  .social media list-footer{
+    float:right;
+  }
 }
 
-.r-column{
-  margin: 0 auto;
-  padding: 10px 10px 10px 25px;
-  background-color: rgba(100, 245, 255, 0.07);
-  border-radius: 10px;
+.card {
+  /* Add shadows to create the "card" effect */
+  transition: 0.3s;
+  padding: 30px;
 }
 
-.text-info{
-  margin: 45% auto;
-  padding: 20px;
-  width: 100%;
-  text-align: center;
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
-.text-info h1{
-  font-size: 80px;
+/* Add some padding inside the card container */
+.container {
+  padding: 6px 16px;
 }
 
-.text-info p{
+.video{
+  width: 560px;
+  height: 315px;
+  margin-top: 210px;
+}
+
+.text-wwalk-4{
+  padding-top: 100px;
+  padding-left: 50px;
+  margin: auto;
+}
+
+.text-wwalk-4 h1{
+  padding-top: 50px;
+  color: white;
+  font-size: 55px;
+}
+
+.text-wwalk-4 h2{
+  color: white;
+  font-size: 25px;
+}
+
+.text-wwalk-4 p{
+  color: white;
   font-size: 20px;
-  line-height: 30px;
 }
 
-}
